--- a/daw/daw/src/main/resources/static/css/dashboardHotel.css
+++ b/daw/daw/src/main/resources/static/css/dashboardHotel.css
@@ -1,69 +1,97 @@
-body{
+body
+{
+    min-width: 100vw;
     margin: 0;
     display: flex;
     flex-direction: column;
     gap: 50px;
 }
 /* header */
-header{
-    background-color: rgb(175, 238, 175);
+header
+{
+    display: flex;
     width: 100vw;
+    height: 150px;
     text-align: center;
 }
-h1{
-    font-size: 3.5rem;
+img
+{
+    height: 100%;
 }
+
 /* main */
-main{
+main
+{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
 }
-.infoReservasContainer{
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-}
-.inputContainer{
-    display: flex;
-    gap: 50px;
-}
-.articleComponenteContainer{
+.infoReservasContainer
+{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 50px;
 }
-.articleComponente{
+.inputContainer
+{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+.articleComponenteContainer
+{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+.articleComponente
+{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-ul{
+ul
+{
     padding: 0;
 }
 /* inicio */
-.liReserva{
+.liReserva
+{
     display: flex;
     gap: 20px;
     padding: 20px 0;
 }
 
 /* info reserva */
-.liInfoReserva{
+.liInfoReserva
+{
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-bottom: 20px;
 }
 /* info gastos */
-.liInfoGastos{
+.liInfoGastos
+{
     list-style: none;
     line-height: 50px;
 }
-.infoPagar{
+.infoPagar
+{
     text-align: right;
     width: 100%;
     margin-bottom: 20px;
+}
+
+/* insertar gastos */
+.insertarGastos
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
 }
