estilos finales landing y preparacion backend

--- a/daw/daw/src/main/resources/static/css/styleLanding.css
+++ b/daw/daw/src/main/resources/static/css/styleLanding.css
@@ -1,28 +1,48 @@
 html{
     height: 100%;
-  
     margin:0;
+   
 }
 body{
+   
     display:flex;
     flex-direction: column;
     min-height: 100%;
     margin:0;
+    background: linear-gradient(180deg, rgb(246, 246, 242) 69%, rgb(192, 171, 104) 100%);
+    background-attachment: fixed;
+    background-size:100% 100%;
+    gap:50px;
+    font-family:'Trebuchet MS', sans-serif;
+    font-size: medium;
+    color:#2D442E ;
 }
-.headerContainer{
-    background-color: antiquewhite;
-    flex-wrap:wrap;
-    height: 200px;
-    margin:0;
-    text-align: center;
-}
-.logoWeb{
-    height: 100%;
-}
+.headerImagen{
+    width: 100vw;
+    height: 150px;
+    padding: 15px;
+    background: url("../css/forest.jpg") center;
+    border-radius: 0 0 150% 150%;
+    opacity: 0.8;
 
-.mainContainer{
+
+}
+.headerLogo{
     display: flex;
-    flex: 1;
+    width: 100vw;
+    height: 150px;
+    align-items: center;
+    justify-content: center;
+
+}
+.logo{
+    height: 100%;
+    width: 300px;
+
+}
+.linea{
+    height: 50%;
+    width: 35%;
 }
 .mainInfo{
     display:flex;
@@ -35,6 +55,7 @@ body{
 }
 .textoInfo{
     line-height: 30px;
+    text-align: justify;
 }
 .info{
     min-width: 400px;
@@ -45,7 +66,7 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 30px;
 }
 label{
     display: flex;
@@ -54,7 +75,8 @@ label{
 }
 input{
     margin-top: 5px;
-    padding: 5px;
+    padding: 10px;
+    height: 25px;
     width: 300px;
     border-radius: 15px;
 }
@@ -67,13 +89,16 @@ input{
 .formButton{
     margin:20px;
     border-radius: 15px;
-    height: 40px;
-    width: 100px;
+    height: 60px;
+    width: 150px;
     text-align: center;
+    color:#2D442E ;
+    font-size: 1rem;
+
     
 }
 .formButton:hover{
-    background-color: bisque;
+    background-color:rgb(192, 171, 104);
 }
 
 .footerContainer{
@@ -81,9 +106,10 @@ input{
     display:flex;
     align-items: center;
     flex-wrap:wrap;
-    background-color: rgb(201, 222, 215);
+    background-color:transparent;
     margin-top: auto;
     flex-direction: column;
+   
 }
 .footerInfoContainer{
     display: flex;
@@ -124,15 +150,17 @@ li{
 }
 a {
     text-decoration: none;
-    color: black;
+    color:#2D442E ;
+   
 }
 a:hover{
-    color: bisque;
+    color: rgb(246, 246, 242) 
 
 }
 .footerPoliticas{
     padding-top: 30px;
     line-height: 25px;
+   
 }
 .copyrigth{
     font-size: 0.75rem;
