--- a/daw/daw/src/main/resources/static/css/dashboardHotel.css
+++ b/daw/daw/src/main/resources/static/css/dashboardHotel.css
@@ -46,7 +46,8 @@ main
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
+    gap: 30px;
+    width: 100%;
 }
 .inputContainer
 {
@@ -55,7 +56,7 @@ main
     flex-wrap: wrap;
     gap: 50px;
 }
-input
+.inputNumReserva, .inputNumHabitacion
 {
     text-align: center;
     height: 25px;
@@ -67,6 +68,10 @@ input
     height: 30px;
     width: 80px;
     border-radius: 10px;
+}
+.botonBuscar:hover
+{
+    background-color: rgb(231, 224, 215);
 }
 .articleComponenteContainer
 {
@@ -80,13 +85,15 @@ input
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 /* inicio */
 .ulCheckin, .ulCheckout
 {
     padding: 0;
+    width: 100;
 }
-.liReserva
+.liReserva, .liInfoGastos
 {
     display: flex;
     gap: 20px;
@@ -95,6 +102,10 @@ input
     border-radius: 5px;
     justify-content: space-around;
     min-width: 430px;
+}
+.ulStyleReserva
+{
+    width: 100%;
 }
 p{
     margin: 0;
@@ -128,31 +139,97 @@ p{
     right: 15px;
 }
 /* info reserva */
+.ulInfoReserva
+{
+    padding: 0;
+}
 .liInfoReserva
 {
     display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+.imgDNI
+{
+    width: 500px;
+}
+.divInfoReservaContainer
+{
+    display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-bottom: 20px;
+    align-items: end;
+    width: 500px;
+    gap: 15px;
+    position: relative;
+    top: 7px;
 }
-/* info gastos */
-.liInfoGastos
+.divInfoReserva
 {
-    list-style: none;
-    line-height: 50px;
+    width: 275px;
 }
-.infoPagar
+@media only screen and (max-width: 1099px) 
 {
-    text-align: right;
-    width: 100%;
-    margin-bottom: 20px;
+    .divInfoReservaContainer
+    {
+        position: relative;
+        left: 17px;
+        align-items: center;
+    }
 }
-
+.parrafoTipoConsumo
+{
+    position: relative;
+    right: 10px;
+    width: 90px;
+}
+.parrafoConsumo
+{
+    position: relative;
+    right: 30px;
+}
+.botonVolverInicio
+{
+    margin-top: 30px;
+    font-size: 1.25rem;
+    padding: 10px;
+    border-radius: 7px;
+}
+.botonVolverInicio:hover
+{
+    background-color: rgb(231, 224, 215);
+}
 /* insertar gastos */
 .insertarGastos
 {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     gap: 20px;
+}
+.labelGasto
+{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+.inputGastos
+{
+    text-align: center;
+    height: 25px;
+    border-radius: 10px;
+    font-size: 1rem;
+}
+.botonAnadirGasto
+{
+    margin-top: 25px;
+    width: 85px;
+    padding: 15px;
+    font-size: 1rem;
+    border-radius: 7px;
+}
+.botonAnadirGasto:hover{
+    background-color: rgb(231, 224, 215);
 }
