--- a/daw/daw/src/main/resources/static/css/dashboardHotel.css
+++ b/daw/daw/src/main/resources/static/css/dashboardHotel.css
@@ -6,13 +6,18 @@ body
 {
     background-color: rgb(248, 244, 237);
     min-width: 100vw;
-    height: 100%;
+    min-height: 100%;
     margin-top: 50px;
     display: flex;
     flex-direction: column;
     gap: 50px;
     font-family: 'Trebuchet MS', sans-serif;
     font-size: 1.25rem;
+}
+footer
+{
+    margin: auto 0 5% 0;
+    text-align: center;
 }
 /* header */
 .logoContainer
@@ -27,6 +32,11 @@ body
 {
     height: 100%;
     width: 300px;
+}
+.logoImgFake
+{
+    /* height: 100%;
+    width: 300px; */
 }
 .flechaImg
 {
@@ -232,4 +242,58 @@ p{
 }
 .botonAnadirGasto:hover{
     background-color: rgb(231, 224, 215);
+}
+
+/* login */
+.bodyLogin
+{
+    background-color: white;
+}
+.mainLogin
+{
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+}
+.formLogin
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    border-radius: 10px;
+    padding: 50px;
+    margin: 50px;
+    background: linear-gradient(180deg, rgb(223, 251, 219) 60%, #9bd740 110%);
+    box-shadow: 5px 5px #ddf7d9;
+}
+.labelLogin
+{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 1.50rem;
+}
+.botonLogin
+{
+    margin-top: 30px;
+    padding: 10px;
+    border-radius: 20px;
+    width: 150px;
+    height: 50px;
+    border: none;
+    background-color: #ffffff;
+    font-size: 1.25rem;
+}
+.botonLogin:hover
+{
+    background-color: #9bd740;
+}
+.inputLogin
+{
+    padding: 10px;
+    border-radius: 7px;
+    text-align: center;
+    font-size: 1.25rem;
+    border: none;
 }
