--- a/daw/daw/src/main/resources/static/css/styleLanding.css
+++ b/daw/daw/src/main/resources/static/css/styleLanding.css
@@ -21,7 +21,7 @@ body{
     width: 100vw;
     height: 150px;
     padding: 15px;
-    background: url("../css/forest.jpg") center;
+    background: url("../img/forest.jpg") center;
     border-radius: 0 0 150% 150%;
     opacity: 0.8;
 
@@ -38,7 +38,6 @@ body{
 .logo{
     height: 100%;
     width: 300px;
-
 }
 .linea{
     height: 50%;
@@ -60,7 +59,6 @@ body{
 .info{
     min-width: 400px;
     max-width: 400px;
-
 }
 .mainFormulario{
     display:flex;
@@ -79,8 +77,15 @@ input{
     height: 25px;
     width: 300px;
     border-radius: 15px;
+    text-align: center;
+}
+.nombre {
+    text-transform: capitalize;
 }
 
+#confirmacion{
+    color: red;
+}
 .mainItems{
     display:flex;
     flex-direction: column;
