--- a/daw/daw/src/main/resources/static/css/dashboardHotel.css
+++ b/daw/daw/src/main/resources/static/css/dashboardHotel.css
@@ -308,8 +308,8 @@ table {
     border-radius: 10px;
     padding: 50px;
     margin: 50px;
-    background: linear-gradient(180deg, rgb(223, 251, 219) 60%, #9bd740 110%);
-    box-shadow: 5px 5px #ddf7d9;
+    background: linear-gradient(180deg, rgb(207, 207, 207) 60%, #afb4a7 110%);
+    box-shadow: 2px 2px #4F6247;
 }
 .labelLogin
 {
@@ -331,7 +331,7 @@ table {
 }
 .botonLogin:hover
 {
-    background-color: #9bd740;
+    background-color: #4F6247;
 }
 .inputLogin
 {
